@@ -1,0 +1,1 @@
+lastvar = lastval # with comment, but no final newline
